--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  
   banner_carousel: ^1.2.1
   cupertino_icons: ^1.0.2
   flutter:
@@ -37,7 +36,9 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  font_awesome_flutter: ^9.2.0
   provider: ^6.0.1
+  simple_star_rating: ^0.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
