--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
@@ -40,6 +41,10 @@ dev_dependencies:
   provider: ^6.0.1
   simple_star_rating: ^0.0.3
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/imgs/app.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
